# Medi-Help

./: .env.example  .gitignore  Health_Assistant_Requirement_Analysis.md  Implementation_Plan.md  Medi-Help_Requirement_Analysis.md  README.md  build_log.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 52c42b1a8ef4_add_extraction_confirmation_fields.py  87e9723e56da_create_medications_medication_schedules_.py  90ee81fb2b47_link_medications_to_source_documents.py  9b0060b00005_create_users_and_refresh_tokens.py  a31f46d8c902_create_vital_records_and_biomarkers.py  c43f62a91b7e_cache_medical_simplifications.py  c6e34031a4c2_create_documents_and_processing_jobs.py  d4f37c90a126_link_lab_records_to_processing_jobs.py  f81a2c7d9e44_deduplicate_health_connect_vitals.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  biomarker.py  document.py  medication.py  medication_schedule.py  processing_job.py  refresh_token.py  reminder_log.py  user.py  vital_record.py
backend/app/processing/: __init__.py  extraction.py  image_processor.py  ocr.py  pipeline.py  prompts.py  safety.py  simplification.py  simplification_safety.py
backend/app/schemas/: auth.py  document.py  extraction.py  medication.py  reminder.py  simplification.py  user.py  vital.py
backend/app/storage/: __init__.py  (+4 more)
backend/tests/: conftest.py  test_processing.py  test_storage.py
(+226 files in other folders)
