[project]
name = "health-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for Health Assistant"
requires-python = ">=3.11"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
