[project]
name = "medi-help-backend"
version = "0.1.0"
description = "FastAPI backend for Medi-Help"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"] # FastAPI's Depends()-as-default is the idiomatic pattern.

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
